# codon_optimization

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yml
src/codon_optimisation/: check.py  cli.py  codon_optimise.py  gc.py
tests/: test_check.py  test_codon_optimise.py  test_gc.py
tests/data/: test.faa
